ingress-us-east1-b-web-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: web-ui-raas-us-east1-b.rec-us-east1-b.34.75.99.216.nip.io
    http:
      paths:
      - backend:
          serviceName: rec-us-east1-b-ui
          servicePort: 8443
        path: /
