ingress-us-west1-a-web-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: web-ui-raas-us-west1-a.rec-us-west1-a.34.105.40.1.nip.io
    http:
      paths:
      - backend:
          serviceName: rec-us-west1-a-ui
          servicePort: 8443
        path: /
